--- a/index.html
+++ b/index.html
@@ -12,10 +12,22 @@
     <div class="wrapper">
         <h1>Countdown to New 2023 Year:</h1>
         <div class="countdowntimer">
-            <div class="timer"><h2 id="days">00</h2><p>Days</p></div>
-            <div class="timer"><h2 id="hours">00</h2><p>Hours</p></div>
-            <div class="timer"><h2 id="minutes">00</h2><p>Minutes</p></div>
-            <div class="timer"><h2 id="seconds">00</h2><p>Seconds</p></div>
+            <div class="timer">
+            <div class="timer-up"><h2 id="days">00</h2></div>
+            <div class="timer-down"><p>Days</p></div>
+        </div>
+            <div class="timer">
+            <div class="timer-up"><h2 id="hours">00</h2></div>
+            <div class="timer-down"><p>Hours</p></div>
+        </div>
+            <div class="timer">
+            <div class="timer-up"><h2 id="minutes">00</h2></div>
+            <div class="timer-down"><p>Minutes</p></div>
+        </div>
+            <div class="timer">
+            <div class="timer-up"><h2 id="seconds">00</h2></div>
+            <div class="timer-down"><p>Seconds</p></div>
+        </div>
         </div>
         <!-- /.countdowntimer -->
     </div>
