--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <div class="wrapper">
         <h1>Countdown to New 2023 Year:</h1>
         <div class="countdowntimer">
-            <div class="timer">
+            <div class="timer orange-bcg">
             <div class="timer-up"><h2 id="days">00</h2></div>
             <div class="timer-down"><p>Days</p></div>
         </div>
-            <div class="timer">
+            <div class="timer blue-bcg">
             <div class="timer-up"><h2 id="hours">00</h2></div>
             <div class="timer-down"><p>Hours</p></div>
         </div>
-            <div class="timer">
+            <div class="timer green-bcg">
             <div class="timer-up"><h2 id="minutes">00</h2></div>
             <div class="timer-down"><p>Minutes</p></div>
         </div>
-            <div class="timer">
+            <div class="timer red-bcg">
             <div class="timer-up"><h2 id="seconds">00</h2></div>
             <div class="timer-down"><p>Seconds</p></div>
         </div>
